# cash-flowr

./: LICENSE  README.md
Frontend/cash_flowr_flutter/: README.md  pubspec.yaml
Frontend/cash_flowr_flutter/android/app/: build.gradle
Frontend/cash_flowr_flutter/ios/Runner/: Info.plist
Frontend/cash_flowr_flutter/ios/Runner.xcodeproj/: project.pbxproj
Frontend/cash_flowr_flutter/linux/: CMakeLists.txt  my_application.cc
Frontend/cash_flowr_flutter/macos/Runner.xcodeproj/: project.pbxproj
Frontend/cash_flowr_flutter/macos/Runner/Configs/: AppInfo.xcconfig
Frontend/cash_flowr_flutter/test/: widget_test.dart
Frontend/cash_flowr_flutter/web/: index.html  manifest.json
Frontend/cash_flowr_flutter/windows/: CMakeLists.txt
Frontend/cash_flowr_flutter/windows/runner/: Runner.rc  main.cpp
backend/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/apps/transactions/: apps.py  urls.py
backend/apps/transactions/migrations/: 0001_initial.py  0002_category_updated_at.py
backend/apps/transactions/models/: __init__.py  category.py  expense.py  income.py
backend/apps/transactions/serializers/: category_serializer.py  expense_serializer.py  income_serializer.py
backend/apps/transactions/views/: income_viewset.py  test_view.py
backend/apps/users/middlewares/: clerk_auth_middleware.py
backend/cash_flowr_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: asgi.py  urls.py
backend/config/settings/: base.py
backend/utils/: signals.py
backend/utils/views/: async_modelviewset.py
(+3 files in other folders)
